bug fix: tabler overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+table {
+	max-width: 100vw !important;
+	max-height: 100vh;
+	overflow: scroll !important;
+}
